--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             font-size: 14px; /* Font size for rows */
         }
         th {
-            background-color: #0075ea;
+            background-color: #004890;
             color: white;
             font-size: 16px; /* Font size for headers */
         }
@@ -72,7 +72,7 @@
             transition: background-color 0.3s ease;
         }
         .button {
-            background-color: #0075ea;
+            background-color: #0069d3;
             color: white;
             padding: 10px 20px;
             border: none;
@@ -82,7 +82,7 @@
             font-size: 14px;
         }
         .button:hover {
-            background-color: #005bb5;
+            background-color: #000a15;
             transform: scale(1.05);
         }
         .footer {
@@ -111,14 +111,14 @@
             text-align: left;
             outline: none;
             font-size: 15px;
-            background-color: #0075ea;
+            background-color: #900404;
             color: white;
             border: 2px solid #ffffff;
             margin-bottom: 10px;
             transition: background-color 0.3s ease;
         }
         .collapsible:hover {
-            background-color: #005bb5;
+            background-color: #000000;
         }
         .content {
             padding: 0 18px;
